--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <GridView
+        android:id="@+id/dynamic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="3" />
